--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="cursor"></div>
   <script src="/app.js"></script>
   <nav>
-    <a href="#header"><img class="logo" src="/img/logo.png"></a>
+    <a href="#header"><img class="logo" src="img/logo.png"></a>
     <ul>
       <li><a href="./aboutus.html">About us</a></li>
       <li><a href="./hourofcode.html">Hour of Code</a></li>
