--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="cursor"></div>
-  <script src="/app.js"></script>
+  <script src="app.js"></script>
   <nav>
     <a href="#header"><img class="logo" src='img/logo.png'></a>
     <ul>
