--- a/hourofcode.html
+++ b/hourofcode.html
@@ -11,7 +11,7 @@
     <div id="cursor"></div>
     <script src="/app.js"></script>
     <nav>
-        <a href="./index.html"><img class="logo" src='/img/logo.png'></a>
+        <a href="./index.html"><img class="logo" src='img/logo.png'></a>
         <ul>
           <li><a href="./aboutus.html">About us</a></li>
           <li><a href="#">Hour of Code</a></li>
