--- a/hourofcode.html
+++ b/hourofcode.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="cursor"></div>
-    <script src="/app.js"></script>
+    <script src='app.js'></script>
     <nav>
         <a href="./index.html"><img class="logo" src='img/logo.png'></a>
         <ul>
